--- a/super.css
+++ b/super.css
@@ -52,7 +52,7 @@ header a:hover {
 nav {
     background-color: #fff;
     font-weight: bold;
-    font-size: 1.2;
+    font-size: 1.2em;
     padding: 0;
     text-align: center;
     border-right: 1px solid var(--text);
@@ -144,13 +144,13 @@ h3 {
     padding: 30px;
 }
 
+.h6 {
+    display: none;
+}
 
 section {
     margin-left: 0;
     margin-right: 0;
-}
-
-section {
     flex: 1;
 }
 
@@ -161,6 +161,7 @@ section {
     margin: 20px 20px 20px 100px;
     width: 1000px;
 }
+
 
 footer {
     font-size: .85em;
